# forge-agent

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: test.yml
docs/: index.md
docs/about/: changelog.md  contributing.md  license.md  roadmap.md  security.md
docs/api/: cli.md  core.md  generator.md  llm.md  mcp.md  observability.md
docs/architecture/: code-store.md  dashboard.md  overview.md  sandbox.md
docs/concepts/: base-agent.md  generator.md  logging.md  mcp.md  pipeline.md
docs/getting-started/: first-agent.md  installation.md  quickstart.md
docs/guides/: configurable-agent-pipeline.md  create-agent.md  custom-capability.md  llm-providers.md  production.md  version-deploy.md
docs/tasks/: D1.1-fastapi-skeleton.md  D1.2-agent-list-page.md  D1.3-manifest-api.md  D1.4-htmx-tailwind.md  D1.5-dashboard-cli.md  IMPLEMENTATION_LOG.md  README.md  STATUS.md  T0.1-python-env.md  T0.2-license.md  T0.3-changelog.md  T0.4-ci.md  T0.5-precommit.md  T0.6-e2e-smoke.md  T1.2-validator.md  T1.3-sandbox-isolation.md  T1.4-e2e-tests.md  T1.5-retry-rollback.md  T2.1.1-agent-type.md  T2.1.3-prompts-by-type.md  T2.1.6-token-tracker.md  dashboard-overview.md  phase-0-overview.md
examples/: README.md  configurable_sports_demo.py  multi_source_odds_demo.py  run_pipeline.py  sports_briefing_demo.py
examples/configs/: odds_sources.yaml  sports_agents.yaml  sports_pipeline.yaml
examples/football_match_agent/: README.md  __init__.py  agents.py  demo.py  pipeline.py
examples/toy_trend_demo/: architect.py  run.py
examples/toy_trend_demo/agents/: scraper_agent.py
examples/toy_trend_demo/configs/: trend_agents.yaml
examples/toy_trend_demo/scrapers/: base.py  dewu.py  mock.py  registry.py  weibo.py  xiaohongshu.py
examples/toy_trend_demo/tools/: __init__.py
scripts/: check_dashboard.sh  check_phase0.sh  install.bat  install.sh  smoke_test.sh
src/forge_agent/: __init__.py  __main__.py  __version__.py  exceptions.py
src/forge_agent/builtin/: __init__.py  agent_type_registry.py  chief_agent.py  logging_agent.py  monitoring_agent.py
src/forge_agent/cli/: __init__.py  __main__.py  _helpers.py  cmd_agent_types.py  cmd_archive.py  cmd_dashboard.py  cmd_datasets.py  cmd_delete.py  cmd_diff.py  cmd_doctor.py  cmd_generate.py  cmd_history.py  cmd_list.py  cmd_list_projects.py  cmd_llm.py  cmd_logs.py  cmd_manifest.py  cmd_mcp.py  cmd_new.py  cmd_restore.py  cmd_review.py  cmd_rollback.py  cmd_save.py  cmd_tools.py  cmd_use.py
src/forge_agent/config/: __init__.py  pipeline.py
src/forge_agent/constraints/: __init__.py  engine.py  policy.py  result.py  utils.py
src/forge_agent/core/: __init__.py  agent_type.py  base.py  capabilities.py  context.py  contracts.py  enums.py  factory.py  mission.py  report_store.py  runner.py  team.py  types.py  validation.py
src/forge_agent/dashboard/: __init__.py  app.py  auth.py
src/forge_agent/data/: __init__.py  normalizer.py  schema.py  source.py
src/forge_agent/datasets/: __init__.py  registry.py  store.py
src/forge_agent/generator/: __init__.py  _subprocess_entry.py  generator.py  injector.py  manifest.py  pipeline.py  prompt_provider.py  prompts.py  registry_getter.py  requirements.py  retry.py  sandbox.py  store.py  validator.py
src/forge_agent/judge/: __init__.py
src/forge_agent/learning/: __init__.py  memory.py  optimizer.py  post_match.py  reflection.py
src/forge_agent/llm/: __init__.py  config.py  exceptions.py  factory.py  protocol.py  protocol_types.py  registry.py  secrets.py  tracker.py  usage_store.py
src/forge_agent/mcp/: __init__.py  client.py  gateway.py  permissions.py  router.py
src/forge_agent/memory/: __init__.py  backends.py  protocol.py
src/forge_agent/observability/: __init__.py  events.py  logger.py  metrics.py  otel_exporter.py  persistence.py  trace.py
src/forge_agent/pipeline/: __init__.py  aggregator.py  engine.py  pipeline.py
src/forge_agent/platform/: __init__.py  config_validator.py  llm_config.py  local_tenant.py  tenant.py  tool.py  tool_registry.py
src/forge_agent/project/: __init__.py  agent_builder.py  launcher.py  state_store.py  tui.py
src/forge_agent/prompt/: __init__.py  manager.py  store.py
src/forge_agent/registry/: __init__.py  decorators.py  discovery.py  registry.py
src/forge_agent/scheduler/: __init__.py  (+3 more)
tests/: conftest.py  test_chief_llm.py  test_errors.py  test_pipeline_loader.py  test_search_agent.py
tests/builtin/: test_agent_type_registry.py
tests/cli/: test_cli_errors.py  test_cmd_llm.py  test_cmd_new.py
tests/e2e/: test_generation_e2e.py
tests/integration/: test_evolve.py  test_football_pipeline.py  test_mcp_filesystem.py  test_mcp_generation.py  test_otel.py  test_scraper_with_dataset.py
tests/llm/: test_providers.py
tests/platform/: test_config_validator.py  test_llm_config.py  test_local_tenant.py  test_tool_registry.py
tests/project/: test_agent_builder.py  test_state_store.py  test_tui.py
tests/unit/: test_agent_type.py  test_agent_type_field.py  test_base_agent.py  test_cli_doctor.py  test_cli_logs.py  test_cli_mcp.py  test_cli_review.py  test_configurable_keywords.py  test_dag_strategy.py  test_data_source.py  test_dataset.py  test_error_messages.py  test_generator.py  test_generator_v2.py  test_judge.py  test_llm.py  test_logger.py  test_mcp_client.py  test_optimizer.py  test_pipeline.py  test_post_match.py  test_prompt_provider.py  test_prompts.py  test_protocol_types.py  test_pydantic_validation.py  test_registry.py  test_report_store.py  test_requirements.py  test_retry.py  test_sandbox.py  test_tavily_search.py  test_templates.py  test_templates_new.py  test_token_tracker.py  test_trace.py  test_validator.py
(+74 files in other folders)
