[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-agent"
version = "0.1.0"
description = "A universal, contract-driven Agent factory & orchestration engine. Business-agnostic base + dynamic code generation + MCP-native + pluggable Pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ricky1122alonefe" },
]
keywords = [
    "agent",
    "agent-framework",
    "agent-factory",
    "mcp",
    "code-generation",
    "orchestration",
    "pipeline",
    "multi-agent",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.5",
    "structlog>=24.1",
    "typing-extensions>=4.9",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "anthropic>=0.25",
]
mcp = [
    "mcp>=1.0",
]
search = [
    "httpx>=0.27",
    "tavily-python>=0.3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[project.urls]
Homepage = "https://github.com/ricky1122alonefe/forge-agent"
Repository = "https://github.com/ricky1122alonefe/forge-agent"
Issues = "https://github.com/ricky1122alonefe/forge-agent/issues"
Documentation = "https://forge-agent.readthedocs.io/"

[project.scripts]
forge-agent = "forge_agent.cli:main"
forge = "forge_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forge_agent*"]

[tool.setuptools.package-data]
"forge_agent" = ["py.typed", "**/*.py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: integration tests",
    "e2e: end-to-end tests",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/forge_agent"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/forge_agent"]
omit = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
