[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-agent"
version = "0.3.0"
description = "A universal, contract-driven Agent factory & orchestration engine. Business-agnostic base + dynamic code generation + MCP-native + pluggable Pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ricky1122alonefe", email = "ricky1122alonefe@example.com" },
]
maintainers = [
    { name = "ricky1122alonefe", email = "ricky1122alonefe@example.com" },
]
keywords = [
    "agent",
    "agent-framework",
    "agent-factory",
    "mcp",
    "code-generation",
    "orchestration",
    "pipeline",
    "multi-agent",
    "ai",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.13.4",
    "structlog>=26.1.0",
    "typing-extensions>=4.15.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "anthropic>=0.25",
]
mcp = [
    "mcp>=1.0",
]
search = [
    "httpx>=0.27",
    "tavily-python>=0.3",
]
scraper = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "croniter>=2.0",
]
otel = [
    "opentelemetry-api>=1.20",
    "opentelemetry-sdk>=1.20",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "watchfiles>=0.21",
]
all = [
    "forge-agent[llm,mcp,search,scraper,otel,dashboard]",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.23",
]

[project.urls]
Homepage = "https://github.com/ricky1122alonefe/forge-agent"
Repository = "https://github.com/ricky1122alonefe/forge-agent"
Issues = "https://github.com/ricky1122alonefe/forge-agent/issues"
Documentation = "https://forge-agent.readthedocs.io/"
Changelog = "https://github.com/ricky1122alonefe/forge-agent/blob/main/CHANGELOG.md"
Funding = "https://github.com/sponsors/ricky1122alonefe"
Source = "https://github.com/ricky1122alonefe/forge-agent"
Discussions = "https://github.com/ricky1122alonefe/forge-agent/discussions"

[project.scripts]
forge-agent = "forge_agent.cli:main"
forge = "forge_agent.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["forge_agent*"]

[tool.setuptools.package-data]
"forge_agent" = ["py.typed", "**/*.py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--showlocals",
    "--durations=10",
]
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (require external services)",
    "e2e: end-to-end tests (require LLM API keys)",
    "network: tests that require network access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:structlog",
    "ignore::DeprecationWarning:mcp",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "site"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "PT",  # flake8-pytest-style
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (common in protocols)
    "B904",   # raise from (too noisy)
    "RUF001", # ambiguous unicode in string (Chinese punctuation is intentional)
    "RUF002", # ambiguous unicode in docstring (Chinese punctuation is intentional)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "S101", "PT011"]
"examples/**/*.py" = ["B011", "N803"]
"docs/**/*.py" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/forge_agent"]
show_error_codes = true
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["mcp.*", "openai.*", "anthropic.*", "ollama.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/forge_agent"]
omit = ["*/tests/*", "*/examples/*", "*/__version__.py"]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]

[tool.bumpversion]
current_version = "0.3.0"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
serialize = ["{major}.{minor}.{patch}"]
search_and_replace = [
    { file = "pyproject.toml", search = "version = \"{current_version}\"", replace = "version = \"{new_version}\"" },
    { file = "src/forge_agent/__version__.py", search = "__version__ = \"{current_version}\"", replace = "__version__ = \"{new_version}\"" },
    { file = "CHANGELOG.md", search = "## \\[Unreleased\\]", replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}" },
]
commit = true
tag = true
sign_tags = true
tag_name = "v{new_version}"

[tool.release]
version_files = [
    "pyproject.toml:project.version",
    "src/forge_agent/__version__.py",
]
